--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -10,6 +10,10 @@
         content="We help you to create and scale your own digital economy, such as wallet and stable currency. Have a digital marketplace where you can be discovered.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://balehu.com/">
+
+  <script>WebFontConfig = { typekit: {id: 'dlz5yfx'}, async: true }</script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
 </head>
@@ -35,19 +39,12 @@
           </ul>
         </nav>
       </div>
-    </div>
-  </div>
-</header>
-<section id="intro" class="intro">
-  <img src="../images/HP-bgnd.png">
-  <div class="mdc-layout-grid bl-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>Powering Merchants,<br> Empowering Consumers.</h1>
       </div>
     </div>
   </div>
-</section>
+</header>
 <section class="digital">
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
@@ -55,7 +52,7 @@
         <h2 class="title_center">Create &amp; scale your <br>own digital economy</h2>
         <img src="../images/digital_bgnd.png" width="100%">
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
+      <div class="order-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
         <div class="upper-text">
           <h3>Digital marketplace</h3>
           <p>Shopping, ordering, and marketing solutions including custom promotions,
@@ -66,7 +63,7 @@
           <p>Instant &amp; secure low cost transactions</p>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div class="order-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <ul class="my-slider">
           <li><img src="../images/slider/slider_01.png"></li>
           <li><img src="../images/slider/slider_02.png"></li>
@@ -75,7 +72,7 @@
           <li><img src="../images/slider/slider_05.png"></li>
         </ul>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div class="order-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <div class="upper-text">
           <h3>Stable digital currency</h3>
           <p>Pegged 1:1 with any fiat currency</p>
@@ -95,7 +92,8 @@
         <h2 class="title_center">Get started for free.<br>See how much we can save your business on&nbsp;fees.</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <img src="../images/balehu_wallet.png" width="100%" height="auto">
+        <img class="iphone-desktop" src="../images/balehu_wallet.png" width="100%" height="auto">
+        <img class="iphone-phone" src="../images/balehu_wallet01.png" width="100%" height="auto">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h2>If your revenue is <input type="number" id="revenue-input" class="bh-revenue__input"/>, Balehu can save up
