Balehu - digital section - text around slider

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -52,18 +52,18 @@
         <h2 class="title_center">Create &amp; scale your <br>own digital economy</h2>
         <img src="../images/digital_bgnd.png" width="100%">
       </div>
-      <div class="order-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
-        <div class="upper-text">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
+        <div class="upper-text upper-text_1">
           <h3>Digital marketplace</h3>
           <p>Shopping, ordering, and marketing solutions including custom promotions,
             loyalty, and gift&nbsp;cards</p>
         </div>
-        <div class="lower-text">
+        <div class="lower-text lower-text_1">
           <h3>Digital wallet</h3>
           <p>Instant &amp; secure low cost transactions</p>
         </div>
       </div>
-      <div class="order-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <ul class="my-slider">
           <li><img src="../images/slider/slider_01.png"></li>
           <li><img src="../images/slider/slider_02.png"></li>
@@ -72,12 +72,12 @@
           <li><img src="../images/slider/slider_05.png"></li>
         </ul>
       </div>
-      <div class="order-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <div class="upper-text">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="upper-text upper-text_2">
           <h3>Stable digital currency</h3>
           <p>Pegged 1:1 with any fiat currency</p>
         </div>
-        <div class="lower-text">
+        <div class="lower-text lower-text_2">
           <h3>Data ownership</h3>
           <p>Consumers make money from selling there transaction&nbsp;data</p>
         </div>
