--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -39,6 +39,8 @@
           </ul>
         </nav>
       </div>
+    </div>
+    <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>Powering Merchants,<br> Empowering Consumers.</h1>
       </div>
@@ -50,15 +52,14 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="title_center">Create &amp; scale your <br>own digital economy</h2>
-        <img src="../images/digital_bgnd.png" width="100%">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
-        <div class="upper-text">
+        <div class="digital__section">
           <h3>Digital marketplace</h3>
           <p>Shopping, ordering, and marketing solutions including custom promotions,
             loyalty, and gift&nbsp;cards</p>
         </div>
-        <div class="lower-text">
+        <div class="digital__section">
           <h3>Digital wallet</h3>
           <p>Instant &amp; secure low cost transactions</p>
         </div>
@@ -73,11 +74,11 @@
         </ul>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <div class="upper-text">
+        <div class="digital__section">
           <h3>Stable digital currency</h3>
           <p>Pegged 1:1 with any fiat currency</p>
         </div>
-        <div class="lower-text">
+        <div class="digital__section">
           <h3>Data ownership</h3>
           <p>Consumers make money from selling there transaction&nbsp;data</p>
         </div>
@@ -90,13 +91,14 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="title_center">Get started for free.<br>See how much we can save your business on&nbsp;fees.</h2>
+        <img src="../images/digital_bgnd.png" width="100%">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img src="../images/balehu_wallet.png" width="100%" height="auto">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>If your revenue is <input type="number" id="revenue-input" class="bh-revenue__input"/>, Balehu can save up
-          to <span id="revenue-output" class="bh-revenue__output"></span> per year on transaction fees over traditional
+        <h2>If your revenue is <span class="bh-revenue">$&nbsp;<input type="number" id="revenue-input" class="bh-revenue__input" min="0" max="1000000000"/></span>, Balehu can save up
+          to <span class="bh-revenue">$&nbsp;<span id="revenue-output" class="bh-revenue__output"></span></span> per year on transaction fees over traditional
           credit&nbsp;cards</h2>
         <a href="" class="button">Request Demo</a>
       </div>
