Basic gray background for sections

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -53,7 +53,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="title_center">Create &amp; scale your <br>own digital economy</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet bl-layout--order-1-mobile ">
         <div class="digital__section">
           <h3>Digital marketplace</h3>
           <p>Shopping, ordering, and marketing solutions including custom promotions,
@@ -64,7 +64,7 @@
           <p>Instant &amp; secure low cost transactions</p>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <ul class="my-slider">
           <li><img src="../images/slider/slider_01.png"></li>
           <li><img src="../images/slider/slider_02.png"></li>
@@ -73,7 +73,7 @@
           <li><img src="../images/slider/slider_05.png"></li>
         </ul>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="digital__section">
           <h3>Stable digital currency</h3>
           <p>Pegged 1:1 with any fiat currency</p>
@@ -87,26 +87,32 @@
   </div>
 </section>
 <section class="wallet">
+  <div class="bl-bgnd-wrapper">
+    <div class="mdc-layout-grid bl-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2 class="title_center">Get started for free.<br>See how much we can save your business on&nbsp;fees.</h2>
+          <img src="../images/img_digital.png" width="100%" alt="barista preparing delicious cup of coffee - get paid more for your product with Balehu">
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2 class="title_center">Get started for free.<br>See how much we can save your business on&nbsp;fees.</h2>
-        <img src="../images/digital_bgnd.png" width="100%">
-      </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img class="iphone-desktop" src="../images/balehu_wallet.png" width="100%" height="auto">
         <img class="iphone-phone" src="../images/balehu_wallet01.png" width="100%" height="auto">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>If your revenue is <span class="bh-revenue">$&nbsp;<input type="number" id="revenue-input" class="bh-revenue__input" min="0" max="1000000000"/></span>, Balehu can save up
-          to <span class="bh-revenue">$&nbsp;<span id="revenue-output" class="bh-revenue__output"></span></span> per year on transaction fees over traditional
+        <h2>If your revenue is <span class="bh-revenue">$ <input type="number" id="revenue-input" class="bh-revenue__input" min="0" max="1000000000" value="500" size="5"/></span>, Balehu can save up
+          to <span class="bh-revenue">$ <span id="revenue-output" class="bh-revenue__output">12.19</span></span> per year on transaction fees over traditional
           credit&nbsp;cards</h2>
         <a href="" class="button">Request Demo</a>
       </div>
     </div>
   </div>
 </section>
-<section class="benefits">
+<section class="benefits bl-bgnd-wrapper">
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
