--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -171,14 +171,14 @@
 <footer>
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="social-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-          <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
-            <img src="../images/balehu.jpg" width="52" height="52">
-          </a>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-12-desktop">
         <nav class="navigation">
           <ul class="menu_list">
+            <li>
+              <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
+                <img src="../images/ico_balehu.png" width="52" height="52">
+              </a>
+            </li>
             <li>
               <a href="#next-event">Home</a>
             </li>
