--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -18,14 +18,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
 </head>
 <body>
+
+<link rel="stylesheet" href="/stylesheets/header.css">
 <header>
   <div class="mdc-layout-grid bl-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <a class="logo" href="/" title="Logo Balehu">Balehu</a>
+    <div class="bl-bar mdc-layout-grid__inner">
+      <div class="bl-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
+        <div class="bl-hamburger__container">
+          <div class="bl-hamburger__bar"></div>
+          <div class="bl-hamburger__bar"></div>
+          <div class="bl-hamburger__bar"></div>
+        </div>
       </div>
-      <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        <nav id="nav" class="navigation">
+        <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
+          <a class="logo" href="/" title="Logo Balehu">Balehu</a>
+        </div>
+      <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+        <nav id="nav" class="navigation bl-menu">
           <ul class="menu_list">
             <li>
               <a href="#next-event">Home</a>
@@ -46,6 +55,44 @@
       </div>
     </div>
   </div>
+
+  <script>
+    var appBar = document.querySelector(".bl-bar");
+    var hamburger = document.querySelector(".bl-hamburger__container");
+    var menu = document.querySelector(".bl-menu");
+    var links = menu.getElementsByTagName('a');
+    for(var i = 0, len = links.length; i < len; i++) {
+      links[i].onclick = toggleMenu(hamburger)
+    }
+    hamburger.addEventListener("click", toggleMenu());
+    function toggleMenu() {
+      return function() {
+        hamburger.classList.toggle("bl-hamburger__container--open");
+        appBar.classList.toggle("bl-bar--open");
+      }
+    }
+
+    var ticking = false;
+
+    window.addEventListener("resize", function() {
+      if (!ticking) {
+        window.requestAnimationFrame(function() {
+          if (window.matchMedia("(min-width: 841px)").matches) {
+            menu.classList.add("bl-menu--horizontal");
+          }
+          else {
+            menu.classList.remove("bl-menu--horizontal");
+          }
+          ticking = false;
+        });
+        ticking = true;
+      }
+    });
+
+    if (window.matchMedia("(min-width: 841px)").matches) {
+      menu.classList.toggle("bl-menu--horizontal");
+    }
+  </script>
 </header>
 <section class="digital">
   <div class="mdc-layout-grid bl-layout-wrapper">
@@ -165,12 +212,12 @@
 <footer>
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="social-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="social-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
           <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
             <img src="../images/balehu.jpg" width="52" height="52">
           </a>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav class="navigation">
           <ul class="menu_list">
             <li>
