small layout fix for footer

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -171,7 +171,7 @@
 <footer>
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-12-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <nav class="navigation">
           <ul class="menu_list">
             <li>
