--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -11,30 +11,45 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://balehu.com/">
 
-  <script>WebFontConfig = { typekit: {id: 'dlz5yfx'}, async: true }</script>
-  <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer crossorigin="anonymous"></script>
+  <script>WebFontConfig = { typekit: { id: "dlz5yfx" }, async: true };</script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer
+          crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/header.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
 </head>
 <body>
+
+<link rel="stylesheet" href="/stylesheets/header.css">
+
+
+<link rel="stylesheet" href="/stylesheets/header.css">
 <header>
   <div class="mdc-layout-grid bl-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
+    <div class="bl-bar mdc-layout-grid__inner">
+      <div
+        class="bl-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
+        <div class="bl-hamburger__container">
+          <div class="bl-hamburger__bar"></div>
+          <div class="bl-hamburger__bar"></div>
+          <div class="bl-hamburger__bar"></div>
+        </div>
+      </div>
       <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <a class="logo" href="/" title="Logo Balehu">Balehu</a>
       </div>
-      <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        <nav id="nav" class="navigation">
+      <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+        <nav id="nav" class="navigation bl-menu">
           <ul class="menu_list">
             <li>
-              <a href="#next-event">Home</a>
+              <a href="">Home</a>
             </li>
             <li>
-              <a href="#seance">Contact</a>
+              <a href="">Contact</a>
             </li>
             <li>
-              <a href="#speakers">Get started for free</a>
+              <a href="">Get started for free</a>
             </li>
           </ul>
         </nav>
@@ -46,14 +61,54 @@
       </div>
     </div>
   </div>
+
+  <script>
+    var appBar = document.querySelector(".bl-bar");
+    var hamburger = document.querySelector(".bl-hamburger__container");
+    var menu = document.querySelector(".bl-menu");
+    var links = menu.getElementsByTagName("a");
+    for (var i = 0, len = links.length; i < len; i++) {
+      links[i].onclick = toggleMenu(hamburger);
+    }
+    hamburger.addEventListener("click", toggleMenu());
+
+    function toggleMenu() {
+      return function() {
+        hamburger.classList.toggle("bl-hamburger__container--open");
+        appBar.classList.toggle("bl-bar--open");
+      };
+    }
+
+    var ticking = false;
+
+    window.addEventListener("resize", function() {
+      if (!ticking) {
+        window.requestAnimationFrame(function() {
+          if (window.matchMedia("(min-width: 841px)").matches) {
+            menu.classList.add("bl-menu--horizontal");
+          } else {
+            menu.classList.remove("bl-menu--horizontal");
+          }
+          ticking = false;
+        });
+        ticking = true;
+      }
+    });
+
+    if (window.matchMedia("(min-width: 841px)").matches) {
+      menu.classList.toggle("bl-menu--horizontal");
+    }
+  </script>
 </header>
+
 <section class="digital">
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="title_center">Create &amp; scale your <br>own digital economy</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet bl-layout--order-1-mobile ">
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet bl-layout--order-1-mobile ">
         <div class="digital__section">
           <h3>Digital marketplace</h3>
           <p>Shopping, ordering, and marketing solutions including custom promotions,
@@ -92,7 +147,8 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2 class="title_center">Get started for free.<br>See how much we can save your business on&nbsp;fees.</h2>
-          <img src="../images/img_digital.png" width="100%" alt="barista preparing delicious cup of coffee - get paid more for your product with Balehu">
+          <img src="../images/img_digital.png" width="100%"
+               alt="barista preparing delicious cup of coffee - get paid more for your product with Balehu">
         </div>
       </div>
     </div>
@@ -104,8 +160,11 @@
         <img class="iphone-phone" src="../images/balehu_wallet01.png" width="100%" height="auto">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>If your revenue is <span class="bh-revenue">$ <input type="number" id="revenue-input" class="bh-revenue__input" min="0" max="1000000000" value="500" size="5"/></span>, Balehu can save up
-          to <span class="bh-revenue">$ <span id="revenue-output" class="bh-revenue__output">12.19</span></span> per year on transaction fees over traditional
+        <h2>If your revenue is <span class="bh-revenue">$ <input type="number" id="revenue-input"
+                                                                 class="bh-revenue__input" min="0" max="1000000000"
+                                                                 value="500" size="5"/></span>, Balehu can save up
+          to <span class="bh-revenue">$ <span id="revenue-output" class="bh-revenue__output">12.19</span></span> per
+          year on transaction fees over traditional
           credit&nbsp;cards</h2>
         <a href="" class="button">Request Demo</a>
       </div>
