--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -36,21 +36,17 @@
           <div class="bl-hamburger__bar"></div>
         </div>
       </div>
-      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div
+        class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
         <a class="logo" href="/" title="Logo Balehu">Balehu</a>
       </div>
-      <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+      <div
+        class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="nav" class="navigation bl-menu">
           <ul class="menu_list">
-            <li>
-              <a href="">Home</a>
-            </li>
-            <li>
-              <a href="">Contact</a>
-            </li>
-            <li>
-              <a href="">Get started for free</a>
-            </li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Get started for free</a></li>
           </ul>
         </nav>
       </div>
