--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -48,9 +48,9 @@
         class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="nav" class="navigation bl-menu">
           <ul class="menu_list">
-            <li><a href="">Home</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Get started for free</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#get-started">Get started for free</a></li>
           </ul>
         </nav>
       </div>
@@ -140,7 +140,7 @@
     </div>
   </div>
 </section>
-<section class="wallet">
+<section id="get-started" class="wallet">
   <div class="bl-bgnd-wrapper">
     <div class="mdc-layout-grid bl-layout-wrapper">
       <div class="mdc-layout-grid__inner">
@@ -238,13 +238,13 @@
               </a>
             </li>
             <li>
-              <a href="#next-event">Home</a>
+              <a href="#">Home</a>
             </li>
             <li>
-              <a href="#seance">Contact</a>
+              <a href="#">Contact</a>
             </li>
             <li>
-              <a href="#speakers">Get started for free</a>
+              <a href="#get-started">Get started for free</a>
             </li>
           </ul>
         </nav>
