Blockchain remake - addition of Blog section

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -254,7 +254,8 @@
                   <em>Tomáš Paulus really knows what he's doing. Based on his research, he adapted the platform into a
                     usable form with a professional design. We certainly recommend him further.</em>
                 </p>
-                <p class="case-study_link"><a href="https://www.topmonks.com/case-studies/profi-option/">VIEW CASE STUDY</a>
+                <p class="case-study_link"><a href="https://www.topmonks.com/case-studies/profi-option/">VIEW CASE
+                  STUDY</a>
                 </p>
               </blockquote>
             </div>
@@ -268,7 +269,7 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>How we work</h2>
+          <h2>How do we work?</h2>
         </div>
         <div
           class="our-work_box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -291,85 +292,165 @@
             the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand behind.</p>
         </div>
       </div>
-      <div class="mdc-layout-grid__inner why-topmonks">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Why TopMonks?</h2>
-          <h2 class="h2_title">Because We Drive the Community!</h2>
-        </div>
-        <div
-          class="our-work_crypto mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3 class="h3_larger">Crypto-salaries</h3>
-          <p>We are not just crypto fans. We don’t just dream of the decentralized
-            world. We live and breathe it. We pay our employees in cryptocurrencies and they
-            don't just hold it, they buy stuff for it. That's&nbsp;common in our&nbsp;world.</p>
-        </div>
-        <div
-          class="our-work_members mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3 class="h3_larger">Members of community</h3>
-          <p>We are active participants of blockchain events and hackathons in the first
-            blockchain hub in The Czech Republic&nbsp;&ndash; Paralelni Polis. We are members of
-            Cryptovalley and Blockchain Slovakia.</p>
-        </div>
-        <div
-          class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3 class="h3_larger">BlockStars Conference</h3>
-          <p>We co-organized <a href="http://www.block-stars.com/">BlockStars Summit</a>. Its goal was to promote
-            blockchain through
-            commercial and startup scene and support new blockchain and ICO projects to
-            offer inspiration both in and outside of the crypto community.</p>
-        </div>
-      </div>
     </div>
   </section>
-
-  <section id="references" class="references">
+  <section id="blog" class="articles">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Here's our work</h2>
+          <h2>We publish</h2>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.penize.cz/">Penize.cz</a>
+          </p>
+          <h3>Libra očima expertů: Udělá facebooková měna díru do&nbsp;světa?</h3>
+          <p class="perex">Facebook (který má jen o&nbsp;trochu míň obyvatel než Čína a Indie
+            dohromady) zavádí vlastní měnu. Digitální libra má velké ambice.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32" height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://www.alza.cz/libra-facebook">Show article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">3.5.2019 /</span> <a type="media_type" href="https://ihned.cz/">Ihned.cz</a>
+          </p>
+          <h3>V&nbsp;byznysu jsem dospěl k&nbsp;taoismu, chaos se nesnažím zkrotit…</h3>
+          <p class="perex">Pracoval pro start-upy, český podnik i&nbsp;korporaci. Založil vlastní firmu,
+            najímal programátory. Teď chce invenční podnikatel přijít na trh
+            s&nbsp;elektronickou vodní dýmkou…</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="https://insight.topmonks.com/avatar/jiri-fabian"
+                   alt="[photo] Jiří Fabiáná" width="32" height="32">
+              <span class="name">Jiří Fabián</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a
+                href="https://ego.ihned.cz/c1-66565070-v-byznysu-jsem-dospel-k-taoismu-chaos-se-nesnazim-zkrotit-rika-jiri-fabian-spolumajitel-startupoveho-studia-topmonks">Show
+                article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.startupjobs.cz/">Startupjobs.cz</a>
+          </p>
+          <h3>Lea Petrášová z&nbsp;TopMonks o&nbsp;decentralizaci firem a zvládání svobody ve
+            fluidních…</h3>
+          <p class="perex">Slovenka Lea Petrášová po studiích v&nbsp;Brně přišla do Prahy, kde
+            čtyři roky pracovala v&nbsp;nadnárodní korporaci. Když ze své pozice
+            odcházela, měla na starosti tým padesáti&nbsp;lidí…</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="https://insight.topmonks.com/avatar/lea-petrasova"
+                   alt="[photo] Lea Petrášová" width="32" height="32">
+              <span class="name">Lea Petrášová</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://www.startupjobs.cz/newsroom/lea-petrasova-topmonks-organizujeme-se-sami">Show article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">30.4.2019 / </span> <a type="media_type" href="https://btctip.cz">Btctip.cz</a>
+          </p>
+          <h3>Naučte se pracovat s&nbsp;bitcoinovými poplatky...</h3>
+          <p class="perex">Transakční poplatky spojené s&nbsp;bitcoinovými transakcemi již dávno
+            nejsou zanedbatelnou položkou, zejména používáte-li Bitcoin na menší
+            transakce. Pro uživatele Bitcoinu je tudíž vhodné seznámit se s&nbsp;několika
+            nástroji, které ukazují aktuální stav&nbsp;sítě.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32" height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://btctip.cz/naucte-se-pracovat-s-bitcoinovymi-poplatky/">Show article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">1.1.2019 / </span> <a type="media_type" href="https://m.alza.cz">Alza.cz</a>
+          </p>
+          <h3>ICO. Co je prvotní nabídka kryptoměny?</h3>
+          <p class="perex">Prvotní nabídky kryptoměnových tokenů, tzv. ICO, se během posledních
+            let staly velice populárními. Nový fenomén skrývá jak potenciální
+            poklady s&nbsp;možností obrovských zisků, tak i&nbsp;velké nástrahy pro
+            investory.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32" height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://www.alza.cz/ico-initial-coin-offerings">Show article</a>
+            </div>
+          </div>
         </div>
         <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
-          <img src="images/img_Binary.png" alt="Landing page of the dApps" width="540px"
-               height="250px">
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">20.4.2018 / </span> <a type="media_type" href="https://m.alza.cz">Alza.cz</a>
+          </p>
+          <h3>Kryptoměnové forky</h3>
+          <p class="perex">Jaký je rozdíl mezi hard a soft forkem? Co dělat a co nedělat při
+            kryptoměnovém forku? Hlubší článek rozebírající různé typy štěpení
+            blockchainu.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32" height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://www.alza.cz/kryptomenove-forky">Show article</a>
+            </div>
+          </div>
         </div>
         <div
-          class="references_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-5-desktop">
-          <h3>Binary Trading Platform</h3>
-          <p>Our team has an extensive and longterm experience of working with trading platforms, making sure trading
-            across multiple channels is absolutely secure, intuitive and effective.</p>
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
-          <img src="images/img_VP.png" alt="Landing page of the VP" width="540px"
-               height="250px">
-        </div>
-        <div
-          class="references_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-5-desktop">
-          <h3>Veracity.protocol</h3>
-          <p>Our team developed 3&nbsp;landing pages, ICO smart contract and supply chain
-            tracking platform based on smart contracts, while securing a major partnership
-            and investment partner, ICO advisor and a first use case in aerospace as part of
-            our support.</p>
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
-          <img src="images/img_dApps.png" alt="Landing page of the Binary" width="540px"
-               height="250px">
-        </div>
-        <div
-          class="references_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-5-desktop">
-          <h3>UI Kit For dApps</h3>
-          <p>We firmly believe that blockchain and crypto should be available to everyone. With the help of our expert
-            designers and developers, Topmonks will ensure your UX is intuitive and smooth.</p>
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">13.2.2018 / </span> <a type="media_type" href="https://btctip.cz">Btctip.cz</a>
+          </p>
+          <h3>DAO a DAICO&nbsp;&ndash; teorie a praxe chytrých kontraktů</h3>
+          <p class="perex">Historie smart contractů a jejich první reálné testování v&nbsp;nechvalně
+            proslulém The DAO. Proč a jak byla tato organizace vykradena, a co to znamená
+            pro budoucí decentralizované organizace?</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32" height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://btctip.cz/dao-a-daico-teorie-a-praxe-chytrych-kontraktu/">Show article</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-
   <section id="contact" class="contact">
     <div class="mdc-layout-grid tm-layout-wrapper">
+      <hr>
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Interested?</h2>
@@ -446,7 +527,7 @@
           </a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-          <img class="person__photo" src="/images/team/tomas.jpg" alt="[photo] Tomáš Paulus">
+          <img class="person__photo" src="/images/team/tomas.jpg" alt="[photo] Tomáš Paulus" width="92" height="92">
           <h4>Tomáš Paulus</h4>
           <p>UX designer</p>
           <a href="https://www.linkedin.com/in/tomaspaulus/" name="LinkedIn - Tomáš Paulus"
