--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -109,7 +109,7 @@
       <div class="fake-button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a class="jumbotron__cta" href="#kontakt">CHCI KONZULTOVAT</a>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="mdc-layout-grid__cell box">
           <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>IT v Retailu [Icon]</title>
@@ -147,7 +147,7 @@
 
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
 
         <div class="mdc-layout-grid__cell box">
           <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -267,41 +267,41 @@
           efektivní řešení? Vybrali jsme pro vás nejčastější situace, které
           s&nbsp;klienty řešíme.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s&nbsp;rychlostí a bezpečností</h3>
         <p>Potřebujete se podívat na infrastrukturu, analýzu bezpečnosti systému,
           analýzu výkonu systému.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci web, co prodává</h3>
         <p>Chcete zvýšit zisky díky marketingu. Zrealizujeme podrobný digitální
           audit vašich webových stránek.</p>
       </div>
 
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci optimalizovat ceny</h3>
         <p>Chcete zavést dynamický pricing, sledovat výkon slev, upravovat ceny na
           míru dle vašich požadavků.</p>
       </div>
 
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci HR 2.0</h3>
         <p>Chcete zavést remote týmy, distribuovanou zodpovědnost, efektivní
           řízení lidí nebo HR analytiku.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci vývojový team</h3>
         <p>Jste ve fázi vývoje nového produktu nebo služby a potřebujete celý
           programátorský&nbsp;tým.</p>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Chci poradit s&nbsp;IT</h3>
         <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
           nabídku z&nbsp;tendru.</p>
       </div>
 
       <div class="advicing_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a class="action-button jumbotron__cta" href="#kontakt">NENAŠLI JSTE, CO VÁS TRÁPÍ?</a>
+        <a class="action-button jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka">NENAŠLI JSTE, CO VÁS TRÁPÍ?</a>
       </div>
 
     </div>
