New TM hp - úprava chyb

--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -17,8 +17,9 @@
 <meta property="og:type" content="company">
 <meta property="og:url" content="https://www.topmonks.cz/">
 <meta property="og:site_name" content="TopMonks.cz">
-
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 <style>
+
   @media screen and (max-width: 479px) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_auto,q_auto,f_auto/v1563018647/www.topmonks.cz/TM-HP_img.png") no-repeat right calc(50% - 165px) top -105px;
